@@ -42,7 +42,7 @@ void manager_reset_config(Manager *m) {
         m->handle_suspend_key = HANDLE_SUSPEND;
         m->handle_hibernate_key = HANDLE_HIBERNATE;
         m->handle_lid_switch = HANDLE_SUSPEND;
-        m->handle_lid_switch_ep = _HANDLE_ACTION_INVALID;
+        m->handle_lid_switch_ep = HANDLE_IGNORE;
         m->handle_lid_switch_docked = HANDLE_IGNORE;
         m->handle_reboot_key = HANDLE_REBOOT;
         m->power_key_ignore_inhibited = false;
@@ -676,7 +676,7 @@ bool manager_all_buttons_ignored(Manager *m) {
                 return false;
         if (m->handle_lid_switch != HANDLE_IGNORE)
                 return false;
-        if (!IN_SET(m->handle_lid_switch_ep, _HANDLE_ACTION_INVALID, HANDLE_IGNORE))
+        if (m->handle_lid_switch_ep != HANDLE_IGNORE)
                 return false;
         if (m->handle_lid_switch_docked != HANDLE_IGNORE)
                 return false;
